--- a/calculator/c-lang/first-principles/index.html
+++ b/calculator/c-lang/first-principles/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculator (First Principles)</title>
+        <title>Calculator (C First Principles)</title>
     </head>
     <body>
-        <h1>Calculator (First Principles)</h1>
+        <h1>Calculator (C First Principles)</h1>
         <p>Enter two numbers, select an operation and click Calculate.</p>
 
         <input id="number1" type="number" />
