--- a/fizz-buzz/c-lang/emcc-plumbing/index.html
+++ b/fizz-buzz/c-lang/emcc-plumbing/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fizz Buzz (Emscripten Plumbing)</title>
+        <title>Fizz Buzz (C Emscripten Plumbing)</title>
     </head>
     <body>
-        <h1>Fizz Buzz (Emscripten Plumbing)</h1>
+        <h1>Fizz Buzz (C Emscripten Plumbing)</h1>
         <p>
             <strong>Count:</strong>
             <input id="count" type="number" value="30" min="1" />
