Update Readme with updated technologies and general use cases, and fix several consistency issues.

--- a/person-info/cpp/emcc-embind/index.html
+++ b/person-info/cpp/emcc-embind/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Person Info (Emscripten Embind)</title>
+        <title>Person Info (C++ Emscripten Embind)</title>
     </head>
     <body>
-        <h1>Person Info (Emscripten Embind)</h1>
+        <h1>Person Info (C++ Emscripten Embind)</h1>
         <p>
             You are
             <input id="name" type="text" placeholder="Your Name" />
