--- a/hello-world/c-lang/emcc-plumbing/index.html
+++ b/hello-world/c-lang/emcc-plumbing/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hello, World! (Emscripten Plumbing)</title>
+        <title>Hello, World! (C Emscripten Plumbing)</title>
     </head>
     <body>
         <h1 id="world-greeting"></h1>
