--- a/hello-world/c-lang/first-principles/index.html
+++ b/hello-world/c-lang/first-principles/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hello, World! (First Principles)</title>
+        <title>Hello, World! (C First Principles)</title>
     </head>
     <body>
         <h1 id="world-greeting"></h1>
